--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,38 @@
-HELP.md
-target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Compiled class files
+*.class
 
-### STS ###
+# Log files
+*.log
+
+# Package Files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# IDE - IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+# IDE - Eclipse
 .apt_generated
 .classpath
 .factorypath
@@ -13,21 +41,51 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
+# IDE - VSCode
 .vscode/
+*.code-workspace
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Spring Boot
+spring.log
+
+# Sensitive Information
+*.env
+.env
+.env.local
+application-local.properties
+application-secret.properties
+
+# Test Reports
+test-output/
+*.exec
+
+# JaCoCo Coverage
+jacoco.exec
+
+# Docker
+*.dockerfile.swp
+
+# Ngrok
+ngrok.exe
+ngrok.log
+
+# Build outputs
+build/
+dist/
+*.bak
+
+# Temporary files
+*.tmp
+*.temp
+~$*
+
+# Node modules (if any frontend)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
