--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/oesys_db
 spring.datasource.username=postgres
-spring.datasource.password=RANAM44M44M@m
+spring.datasource.password=${DB_PASSWORD:postgres}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.format_sql=true
