--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,43 @@
+version: '3.8'
+
 services:
   postgres:
-    image: 'postgres:latest'
+    image: 'postgres:15-alpine'
+    container_name: oesys-postgres
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      POSTGRES_DB: oesys_db
+      POSTGRES_USER: oesys_user
+      POSTGRES_PASSWORD: oesys_pass_2024
+      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
-      - '5432'
+      - '5432:5432'
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - oesys-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U oesys_user -d oesys_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
+  # Opsiyonel: Adminer - PostgreSQL Web UI
+  adminer:
+    image: adminer:latest
+    container_name: oesys-adminer
+    ports:
+      - '8081:8080'
+    networks:
+      - oesys-network
+    depends_on:
+      - postgres
+    restart: unless-stopped
+
+volumes:
+  postgres-data:
+    driver: local
+
+networks:
+  oesys-network:
+    driver: bridge
