--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,35 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/oesys_db
-spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD:postgres}
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:oesys_db}
+spring.datasource.username=${DB_USER:oesys_user}
+spring.datasource.password=${DB_PASSWORD:oesys_pass_2024}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
 
-# Hikari settings (optional)
+# Hikari Connection Pool Settings
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
 
-# Application name
+# Application Configuration
 spring.application.name=OnlineEgitimVeSinavSurecleriYonetimSistemi
+server.port=${SERVER_PORT:8080}
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.example.OnlineEgitimVeSinavSurecleriYonetimSistemi=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
